# api/models/Chat.js
@@ -3,6 +3,7 @@ const Schema = mongoose.Schema;
 
 const ChatSchema = new Schema({
 	name: { type: String, unique: true, required: true },
+	icon_url: { type: String, unique: true, required: true },
 	channels: [{ type: Schema.Types.ObjectId, ref: 'channels' }],
 });
 
